        Reviewed by Oliver Hunt.

https://bugs.webkit.org/show_bug.cgi?id=23459
        Workers are not properly terminated if execution hasn't begun yet

        Doesn't affect observable behavior, so test case is not possible.

        * dom/WorkerThread.cpp: (WebCore::WorkerThread::workerThread): Call forbidExecution() if
        it couldn't be called earlier.



Canonical link: https://commits.webkit.org/32347@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40159 268f45cc-cd09-0410-ab3c-d52691b4dbfc